[gd_scene load_steps=2 format=3 uid="uid://ddo2s47fc5vpy"]

[ext_resource type="Script" uid="uid://htn3g6a6h1l3" path="res://Resources/Scenes/LeaderboardScreen.gd" id="1_musce"]

[node name="LeaderboardScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_musce")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.85)

[node name="BackgroundPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(1200, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -55.0
offset_right = 30.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Harvest Hall of Fame"

[node name="TabContainer" type="TabContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Local" type="Control" parent="BackgroundPanel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/TabContainer/Local"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EntriesContainer" type="VBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/TabContainer/Local/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Global" type="Control" parent="BackgroundPanel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="StatusLabel" type="Label" parent="BackgroundPanel/MarginContainer/VBoxContainer/TabContainer/Global"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -11.5
offset_right = 87.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Connecting to Steam..."

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/TabContainer/Global"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EntriesContainer" type="VBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/TabContainer/Global/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="RefreshButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/TabContainer/Global"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -31.0
offset_right = 34.0
grow_horizontal = 2
grow_vertical = 0
text = "Refresh"

[node name="ButtonContainer" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="CloseButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Continue"

[node name="TitleButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Return To Title"
